--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>2D breakout</title>
-    <link rel="stylesheet" href="styles.css">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <style>
+        * { padding: 0; margin: 0; }
+ 
+    </style>   
+    <script src="min.js"></script>
+    <title>Game</title>
 </head>
-    <canvas id="myCanvas" width="480" height="320"></canvas>
+<body>
+    
+
     <script src="game.js"></script>
 </body>
 </html>
