--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         * { padding: 0; margin: 0; }
  
     </style>   
-    <script src="min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/phaser@2.6.2/build/phaser.min.js"></script>
     <title>Game</title>
 </head>
 <body>
